--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -1,9 +1,12 @@
 body {
-  background-color: gray;
+  background-color: blueviolet;
+  font-family: Raleway, Helvetica, sans-serif;
 }
 
 .card {
-  background-color: white;
+  background-color: ghostwhite;
   border-radius: 5px;
   box-shadow: 0 1px 2px 0 rgba(0,0,0,.25);
+  padding: 5px;
+  margin: 10px 0;
 }
