--- a/assets/css/resume.css
+++ b/assets/css/resume.css
@@ -1,3 +1,16 @@
 .resume {
   padding: 10px;
 }
+
+.basic-info, .education {
+  padding: 0 10px;
+}
+
+.job-title {
+  font-size: larger;
+}
+
+.education h3 {
+  margin-bottom: .5em;
+}
+
