moving things around

--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -1,16 +1,28 @@
 body {
   background-color: blueviolet;
-  font-family: Raleway, Helvetica, sans-serif;
+  font-family: 'Raleway', sans-serif;
+  background: -moz-linear-gradient(-45deg, blue 0%, blueviolet 35%, violet 100%);
+  background: -webkit-linear-gradient(-45deg, blue 0%, blueviolet 35%, violet 100%);
+  background: linear-gradient(135deg, blue 0%, blueviolet 35%, violet 100%);
 }
 
 .card {
   background-color: ghostwhite;
   border-radius: 5px;
   box-shadow: 0 1px 2px 0 rgba(0,0,0,.25);
-  padding: 5px;
+  padding: 10px;
   margin: 10px 0;
 }
 
 .horiz-links span {
   margin: 0 5px;
+}
+
+.horiz-links span:after {
+  content: '|';
+  color: gray;
+}
+
+.horiz-links span:last-child:after {
+  content: none;
 }
