--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -10,17 +10,18 @@ body {
   background-color: ghostwhite;
   border-radius: 5px;
   box-shadow: 0 1px 2px 0 rgba(0,0,0,.25);
-  padding: 10px;
+  padding: 15px;
   margin: 10px 0;
 }
 
 .horiz-links span {
-  margin: 0 5px;
+  padding-right: 10px;
 }
 
 .horiz-links span:after {
   content: '|';
   color: gray;
+  padding-left: 10px;
 }
 
 .horiz-links span:last-child:after {
