--- a/assets/css/resume.css
+++ b/assets/css/resume.css
@@ -10,17 +10,18 @@
   font-size: larger;
 }
 
-.resume h3 {
-  margin-bottom: .5em;
-}
-
 .dates {
   font-weight: 300;
-  float: right;
 }
 
-@media (max-width: 600px) {
+/* medium screen up */
+@media only screen and (min-width: 40.063em) {
   .dates {
-    float: none;
+    text-align: right;
   }
+}
+
+/* large screen up */
+@media only screen and (min-width: 64.063em) {
+
 }
