--- a/assets/css/resume.css
+++ b/assets/css/resume.css
@@ -14,6 +14,10 @@
   font-weight: 300;
 }
 
+.education hr {
+  padding: 10px 0;
+}
+
 /* medium screen up */
 @media only screen and (min-width: 40.063em) {
   .dates {
