--- a/assets/css/print.css
+++ b/assets/css/print.css
@@ -4,9 +4,9 @@
    }
 
    .card {
-    border-bottom: 1px solid black;
+    border-bottom: 1px solid lightgray;
     border-radius: 0;
-    padding: 0;
+    padding: 0 0 5px 0;
     margin: 5px 0;
    }
   .card:last-of-type{
